# AI-for-Pac-Man

./: CMakeLists.txt  README.md  setup.py  setup.sh
ai/: CONSTANTS.py  board.py  create_board.py  direction.py  ipc.py  main.py  pacman.py  pacman_ai.py  test.py
src/: Board.cpp  Board.h  Constants.cpp  Constants.h  Controls.cpp  Controls.h  Ghost.cpp  Ghost.h  Graphics.cpp  Graphics.h  Main.cpp  Map.cpp  Map.h  MobileObject.cpp  MobileObject.h  Utils.h  pacmanmodule.cpp
